--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
+    "vite-plugin-pages": "^0.32.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
