--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "**/*.{js,jsx,ts,tsx}": "eslint --fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
