--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
