--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.6",
     "@mui/x-charts": "^7.12.0",
+    "@react-spring/web": "^9.7.4",
     "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
