--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.6",
+    "@mui/x-charts": "^7.12.0",
+    "@react-spring/web": "^9.7.4",
     "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -40,5 +43,9 @@
     "lint-staged": "^15.2.8",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/NaokiMizuta5/geekcamp12.git",
+  "author": "smz-exe <shimizu-yuki13861@keio.jp>",
+  "license": "MIT"
 }
