--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-charts": "^7.12.0",
     "@react-spring/web": "^9.7.4",
     "axios": "^1.7.3",
+    "dayjs": "^1.11.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
