--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "builds": [
       {
         "src": "server/wsgi.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": { "distDir": "dist" }
       }
     ],
     "routes": [
