fix: そろそろ行ってくれ

--- a/vercel.json
+++ b/vercel.json
@@ -16,8 +16,12 @@
         "dest": "server/manage.py"
       },
       {
+        "src": "/(assets|images|js|css)/(.*)",
+        "dest": "/dist/$1/$2"
+      },
+      {
         "src": "/(.*)",
-        "dest": "/index.html"
+        "dest": "/dist/index.html"
       }
     ]
   }
