--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
       {
-        "src": "server/manage.py",
+        "src": "server/wsgi.py",
         "use": "@vercel/python"
       },
       {
