--- a/vercel.json
+++ b/vercel.json
@@ -12,16 +12,16 @@
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
+        "src": "api/(.*)",
         "dest": "server/wsgi.py"
       },
       {
-        "src": "/(assets|images|js|css)/(.*)",
-        "dest": "/dist/$1/$2"
+        "src": "(assets|images|js|css)/(.*)",
+        "dest": "dist/$1/$2"
       },
       {
-        "src": "/(.*)",
-        "dest": "/dist/index.html"
+        "src": "(.*)",
+        "dest": "dist/index.html"
       }
     ]
   }
