fix: django関連のディレクトリ構造を変更

--- a/vercel.json
+++ b/vercel.json
@@ -17,11 +17,11 @@
       },
       {
         "src": "/(assets|images|js|css)/(.*)",
-        "dest": "dist/$1/$2"
+        "dest": "/dist/$1/$2"
       },
       {
         "src": "/(.*)",
-        "dest": "dist/index.html"
+        "dest": "/dist/index.html"
       }
     ]
   }
