--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
       {
-        "src": "backend/wsgi.py",
+        "src": "backend/server/wsgi.py",
         "use": "@vercel/python"
       },
       {
@@ -12,7 +12,7 @@
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "backend/wsgi.py"
+        "dest": "backend/server/wsgi.py"
       }
     ]
   }
